# soc-openenv

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  client.py  ersvathaOneDriveDesktopsoc-openenv.venvScriptsActivate.ps1  inference.py  main.py  openenv  openenv.yaml  pyproject.toml  pytest.ini  requirements.txt  scenario_config.json
env/: environment.py  grader.py  models.py  tasks.py
server/: __init__.py  app.py  environment.py  grader.py  models.py  tasks.py
tests/: test_api.py  test_environment.py  test_grader.py
